# DrissionPage

./: .gitignore  MANIFEST.in  README.md  data_structure_example.json  diagnose_detailed.py  diagnose_full_chromium.py  diagnose_full_flow.py  diagnose_handle_options.py  diagnose_headless.py  diagnose_test.py  final_verification.py  pyproject.toml  quick_verify.py  regression_final.py  regression_final_v2.py  regression_final_v3.py  regression_test.py  requirements.txt  run_acceptance.py  setup.py  simple_example.py  task_example.py  tasks.json  test.py  test_acceptance.py  test_cookie_sync.py  test_debug_detail.py  test_debug_reconnect.py  test_diagnose.py  test_diagnose2.py  test_downloader_concurrency.py  test_downloadkit_patched.py  test_downloadkit_regression.py  test_driver_concurrency.py  test_driver_concurrency_fixed.py  test_driver_concurrency_simple.py  test_driver_consistency.py  test_driver_listener_fault_isolation.py  test_driver_listener_resilience.py  test_driver_recovery.py  (+40 more)
.gitee/: ISSUE_TEMPLATE.zh-CN.md
.tmp_check/: dp_configs.ini
DrissionPage/: __init__.py  __init__.pyi  common.py  errors.py  items.py  version.py
executions/: task_1_exec_1.json  task_1_exec_20251130204148.json  task_2_exec_2.json  task_2_exec_20251130204250.json  task_2_exec_20251130204454.json  task_2_exec_20251130204658.json  task_2_exec_20251130204801.json  task_2_exec_20251130205003.json
task_logs/: execution_records.json
tests/: run_listener_acceptance.py  test_downloader_concurrency.py  test_listener_lifecycle.py  test_listener_regression.py
(+97 files in other folders)
