[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "DrissionPage"
version = "4.1.1.2"
description = "Python based web automation tool. It can control the browser and send and receive data packets."
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = "g1879", email = "g1879@qq.com" },
]
keywords = ["DrissionPage"]
classifiers = [
  "Programming Language :: Python :: 3.6",
  "Development Status :: 4 - Beta",
  "Topic :: Utilities",
]
dependencies = [
  "lxml",
  "requests",
  "cssselect",
  "DownloadKit>=2.0.7",
  "websocket-client",
  "click",
  "tldextract>=3.4.4",
  "psutil",
]

[project.scripts]
dp = "DrissionPage._functions.cli:main"

[tool.setuptools]
packages = ["DrissionPage"]
include-package-data = true
zip-safe = false
